--- a/part-1-model-model-recommender.ipynb
+++ b/part-1-model-model-recommender.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1: Building an Item-Item Recommender\n",
+    "# Part 1: Building an Model-Model Recommender\n",
     "\n",
-    "If you use Netflix, you will notice that there is a section titled \"Because you watched Movie X\", which provides recommendations for movies based on a recent movie that you've watched. This is a classic example of an item-item recommendation. \n",
+    "This forms a recommender system to suggest similar models based on their features (feature view). \n",
     "\n",
-    "In this tutorial, we will generate item-item recommendations using a technique called [collaborative filtering](https://en.wikipedia.org/wiki/Collaborative_filtering). Let's get started! "
+    "This example will generate a Model-FV recommendation using a technique called [collaborative filtering](https://en.wikipedia.org/wiki/Collaborative_filtering)."
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,69 +90,181 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>userId</th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>timestamp</th>\n",
+       "      <th>2596</th>\n",
+       "      <th>51</th>\n",
+       "      <th>3</th>\n",
+       "      <th>258</th>\n",
+       "      <th>0</th>\n",
+       "      <th>510</th>\n",
+       "      <th>221</th>\n",
+       "      <th>232</th>\n",
+       "      <th>148</th>\n",
+       "      <th>6279</th>\n",
+       "      <th>...</th>\n",
+       "      <th>0.34</th>\n",
+       "      <th>0.35</th>\n",
+       "      <th>0.36</th>\n",
+       "      <th>0.37</th>\n",
+       "      <th>0.38</th>\n",
+       "      <th>0.39</th>\n",
+       "      <th>0.40</th>\n",
+       "      <th>0.41</th>\n",
+       "      <th>0.42</th>\n",
+       "      <th>5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>964982703</td>\n",
+       "      <td>2590</td>\n",
+       "      <td>56</td>\n",
+       "      <td>2</td>\n",
+       "      <td>212</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>390</td>\n",
+       "      <td>220</td>\n",
+       "      <td>235</td>\n",
+       "      <td>151</td>\n",
+       "      <td>6225</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>964981247</td>\n",
+       "      <td>2804</td>\n",
+       "      <td>139</td>\n",
+       "      <td>9</td>\n",
+       "      <td>268</td>\n",
+       "      <td>65</td>\n",
+       "      <td>3180</td>\n",
+       "      <td>234</td>\n",
+       "      <td>238</td>\n",
+       "      <td>135</td>\n",
+       "      <td>6121</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>964982224</td>\n",
+       "      <td>2785</td>\n",
+       "      <td>155</td>\n",
+       "      <td>18</td>\n",
+       "      <td>242</td>\n",
+       "      <td>118</td>\n",
+       "      <td>3090</td>\n",
+       "      <td>238</td>\n",
+       "      <td>238</td>\n",
+       "      <td>122</td>\n",
+       "      <td>6211</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>47</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>964983815</td>\n",
+       "      <td>2595</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2</td>\n",
+       "      <td>153</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>391</td>\n",
+       "      <td>220</td>\n",
+       "      <td>234</td>\n",
+       "      <td>150</td>\n",
+       "      <td>6172</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>964982931</td>\n",
+       "      <td>2579</td>\n",
+       "      <td>132</td>\n",
+       "      <td>6</td>\n",
+       "      <td>300</td>\n",
+       "      <td>-15</td>\n",
+       "      <td>67</td>\n",
+       "      <td>230</td>\n",
+       "      <td>237</td>\n",
+       "      <td>140</td>\n",
+       "      <td>6031</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 55 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   userId  movieId  rating  timestamp\n",
-       "0       1        1     4.0  964982703\n",
-       "1       1        3     4.0  964981247\n",
-       "2       1        6     4.0  964982224\n",
-       "3       1       47     5.0  964983815\n",
-       "4       1       50     5.0  964982931"
+       "   2596   51   3  258    0   510  221  232  148  6279  ...  0.34  0.35  0.36  \\\n",
+       "0  2590   56   2  212   -6   390  220  235  151  6225  ...     0     0     0   \n",
+       "1  2804  139   9  268   65  3180  234  238  135  6121  ...     0     0     0   \n",
+       "2  2785  155  18  242  118  3090  238  238  122  6211  ...     0     0     0   \n",
+       "3  2595   45   2  153   -1   391  220  234  150  6172  ...     0     0     0   \n",
+       "4  2579  132   6  300  -15    67  230  237  140  6031  ...     0     0     0   \n",
+       "\n",
+       "   0.37  0.38  0.39  0.40  0.41  0.42  5  \n",
+       "0     0     0     0     0     0     0  5  \n",
+       "1     0     0     0     0     0     0  2  \n",
+       "2     0     0     0     0     0     0  2  \n",
+       "3     0     0     0     0     0     0  5  \n",
+       "4     0     0     0     0     0     0  2  \n",
+       "\n",
+       "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings = pd.read_csv(\"https://s3-us-west-2.amazonaws.com/recommender-tutorial/ratings.csv\")\n",
-    "ratings.head()"
+    "measurements = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/covtype/covtype.data.gz\")\n",
+    "measurements.head()"
    ]
   },
   {
