--- a/part-1-model-model-recommender.ipynb
+++ b/part-1-model-model-recommender.ipynb
@@ -67,101 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0.22</th>\n",
-       "      <th>148</th>\n",
-       "      <th>0.29</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>58101.000000</td>\n",
-       "      <td>58101.000000</td>\n",
-       "      <td>58101.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.006747</td>\n",
-       "      <td>142.543003</td>\n",
-       "      <td>0.004406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.081862</td>\n",
-       "      <td>38.354173</td>\n",
-       "      <td>0.066233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>119.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>143.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>168.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>252.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "               0.22           148          0.29\n",
-       "count  58101.000000  58101.000000  58101.000000\n",
-       "mean       0.006747    142.543003      0.004406\n",
-       "std        0.081862     38.354173      0.066233\n",
-       "min        0.000000      0.000000      0.000000\n",
-       "25%        0.000000    119.000000      0.000000\n",
-       "50%        0.000000    143.000000      0.000000\n",
-       "75%        0.000000    168.000000      0.000000\n",
-       "max        1.000000    252.000000      1.000000"
+       "10"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,100 +84,42 @@
    "source": [
     "num_models= 10\n",
     "import random\n",
-    "fs_per_model = [(sys_feat_space.sample(n=random.randint(0,col_size),axis='columns',replace=True)).sample(frac=1/num_models, random_state=10*(i+1)) for i in range(n)]\n",
+    "fs_per_model_list = [(sys_feat_space.sample(n=random.randint(0,col_size),axis='columns',replace=True)).sample(frac=1/num_models, random_state=10*(i+1)) for i in range(num_models)]\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the have-have not vectors per model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>title</th>\n",
-       "      <th>genres</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Jumanji (1995)</td>\n",
-       "      <td>Adventure|Children|Fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Grumpier Old Men (1995)</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Waiting to Exhale (1995)</td>\n",
-       "      <td>Comedy|Drama|Romance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Father of the Bride Part II (1995)</td>\n",
-       "      <td>Comedy</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   movieId                               title  \\\n",
-       "0        1                    Toy Story (1995)   \n",
-       "1        2                      Jumanji (1995)   \n",
-       "2        3             Grumpier Old Men (1995)   \n",
-       "3        4            Waiting to Exhale (1995)   \n",
-       "4        5  Father of the Bride Part II (1995)   \n",
-       "\n",
-       "                                        genres  \n",
-       "0  Adventure|Animation|Children|Comedy|Fantasy  \n",
-       "1                   Adventure|Children|Fantasy  \n",
-       "2                               Comedy|Romance  \n",
-       "3                         Comedy|Drama|Romance  \n",
-       "4                                       Comedy  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "32\n"
+     ]
     }
    ],
    "source": [
-    "movies = pd.read_csv(\"https://s3-us-west-2.amazonaws.com/recommender-tutorial/movies.csv\")\n",
-    "movies.head()"
+    "model_feat_vec = [[0]*col_size for i in range(num_models)]\n",
+    "for i, feat_space in enumerate(fs_per_model_list):\n",
+    "    for j, col in enumerate(feat_space.columns):\n",
+    "        # if j == 0 and i == 0:\n",
+    "            # print(feat_space.columns[j])\n",
+    "        model_feat_vec[i][sys_feat_space.columns.get_loc(feat_space.columns[j])] = 1\n",
+    "print(np.count_nonzero(model_feat_vec[5]))\n",
+    "print(fs_per_model_list[5].shape[1])\n",
+    "# print(fs_per_model_list[0].describe())\n",
+    "   \n"
    ]
   },
   {
