duplicates in feat_space so numbers make sense for mfv

--- a/part-1-model-model-recommender.ipynb
+++ b/part-1-model-model-recommender.ipynb
@@ -89,23 +89,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create the have-have not vectors per model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21\n",
-      "32\n"
+      "0.33\n",
+      "Index(['0.33', '221', '0.16', '5', '0.33', '0.35', '0.25', '0.7', '0.42',\n",
+      "       '258', '0.19', '0.1', '0.41', '0.30', '0.24', '2596', '0.22', '0.30',\n",
+      "       '0.15', '0.34', '0.27', '1', '0.1', '0.6', '5', '0.28', '0.36', '0.5',\n",
+      "       '0.14', '0.38', '0.36', '1', '221', '0.11'],\n",
+      "      dtype='object') 34\n",
+      "44\n",
+      "SUP  22 1\n",
+      "Index(['2596', '51', '3', '258', '0', '510', '221', '232', '148', '6279', '1',\n",
+      "       '0.1', '0.2', '0.3', '0.4', '0.5', '0.6', '0.7', '0.8', '0.9', '0.10',\n",
+      "       '0.11', '0.12', '0.13', '0.14', '0.15', '0.16', '0.17', '0.18', '0.19',\n",
+      "       '0.20', '0.21', '0.22', '0.23', '0.24', '0.25', '0.26', '0.27', '0.28',\n",
+      "       '0.29', '0.30', '0.31', '1.1', '0.32', '0.33', '0.34', '0.35', '0.36',\n",
+      "       '0.37', '0.38', '0.39', '0.40', '0.41', '0.42', '5'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
@@ -113,12 +119,15 @@
     "model_feat_vec = [[0]*col_size for i in range(num_models)]\n",
     "for i, feat_space in enumerate(fs_per_model_list):\n",
     "    for j, col in enumerate(feat_space.columns):\n",
-    "        # if j == 0 and i == 0:\n",
-    "            # print(feat_space.columns[j])\n",
+    "        if j == 0 and i == 0:\n",
+    "            print(feat_space.columns[j])\n",
+    "            print(feat_space.columns,feat_space.shape[1])\n",
+    "            print(sys_feat_space.columns.get_loc(feat_space.columns[j]))\n",
     "        model_feat_vec[i][sys_feat_space.columns.get_loc(feat_space.columns[j])] = 1\n",
-    "print(np.count_nonzero(model_feat_vec[5]))\n",
-    "print(fs_per_model_list[5].shape[1])\n",
+    "print(\"SUP \",np.count_nonzero(model_feat_vec[1]),model_feat_vec[0][44])\n",
+    "# print(fs_per_model_list[0].shape[1])\n",
     "# print(fs_per_model_list[0].describe())\n",
+    "print(sys_feat_space.columns)\n",
     "   \n"
    ]
   },
