outputs neighbors. need to verify

--- a/part-1-model-model-recommender.ipynb
+++ b/part-1-model-model-recommender.ipynb
@@ -67,46 +67,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_models= 10\n",
     "import random\n",
     "fs_per_model_list = [(sys_feat_space.sample(n=random.randint(0,col_size),axis='columns',replace=True)).sample(frac=1/num_models, random_state=10*(i+1)) for i in range(num_models)]\n",
-    "\n"
+    "# creates random sample of features for each model with random col and random rows (duplicated col allowed)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create model-feature vector aka Have-Have Nots"
+    "## Step 3: Create model-feature vector aka Have-Have Nots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0   1   2   3   4   5   6   7   8   9   ...  45  46  47  48  49  50  51  \\\n",
+      "0   1   0   1   0   0   0   1   1   0   0  ...   0   1   1   1   1   1   0   \n",
+      "1   1   0   0   0   0   0   0   0   1   1  ...   1   0   1   0   1   1   1   \n",
+      "2   0   1   0   0   0   1   0   0   0   1  ...   0   0   0   0   0   1   0   \n",
+      "3   1   0   0   1   0   0   0   1   0   1  ...   0   1   0   0   0   0   0   \n",
+      "4   0   0   0   0   0   0   0   1   0   0  ...   0   0   0   0   0   0   0   \n",
+      "\n",
+      "   52  53  54  \n",
+      "0   1   0   1  \n",
+      "1   1   0   0  \n",
+      "2   0   1   1  \n",
+      "3   0   1   0  \n",
+      "4   0   0   0  \n",
+      "\n",
+      "[5 rows x 55 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "model_feat_vec = [[0]*col_size for i in range(num_models)]\n",
     "for i, feat_space in enumerate(fs_per_model_list):\n",
     "    for j, col in enumerate(feat_space.columns):\n",
     "         model_feat_vec[i][sys_feat_space.columns.get_loc(feat_space.columns[j])] = 1\n",
     "\n",
-    "   \n"
+    "util_matrix = pd.DataFrame(model_feat_vec)\n",
+    "print(util_matrix.head())\n"
    ]
   },
   {
@@ -925,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,8 +958,9 @@
     "    \"\"\"\n",
     "    neighbour_ids = []\n",
     "    \n",
-    "    movie_ind = movie_mapper[movie_id]\n",
-    "    movie_vec = X[movie_ind]\n",
+    "    movie_index = movie_mapper[movie_id]\n",
+    "    movie_vec = X[movie_index]\n",
+    "    print(movie_vec)\n",
     "    k+=1\n",
     "    kNN = NearestNeighbors(n_neighbors=k, algorithm=\"brute\", metric=metric)\n",
     "    kNN.fit(X)\n",
@@ -965,6 +978,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TEST\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_similar_models(model_id, X, k, metric='cosine', show_distance=False):\n",
+    "    \"\"\"\n",
+    "    Finds k-nearest neighbours for a given model id.\n",
+    "    \n",
+    "    Args:\n",
+    "        model_id: id of the model of interest\n",
+    "        X: model-feature utility matrix\n",
+    "        k: number of similar model to retrieve\n",
+    "        metric: distance metric for kNN calculations\n",
+    "    \n",
+    "    Returns:\n",
+    "        list of k similar movie ID's\n",
+    "    \"\"\"\n",
+    "    neighbour_ids = []\n",
+    "    # model_vec = X[model_id]\n",
+    "    model_vec = [model_feat_vec[model_id] for i in range(col_size)]\n",
+    "\n",
+    "    k+=1\n",
+    "    kNN = NearestNeighbors(n_neighbors=k, algorithm=\"brute\", metric=metric)\n",
+    "    kNN.fit(X)\n",
+    "    if isinstance(model_vec, (np.ndarray)):\n",
+    "        model_vec = model_vec.reshape(1,-1)\n",
+    " \n",
+    "\n",
+    "    neighbour = kNN.kneighbors(model_vec, return_distance=show_distance)\n",
+    "    for i in range(0,k):\n",
+    "        n = neighbour.item(i)\n",
+    "        neighbour_ids.append(n)\n",
+    "    neighbour_ids.pop(0)\n",
+    "    return neighbour_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 3, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "similar_ids = find_similar_models(model_id=9, X=util_matrix, k=3, metric=\"euclidean\")\n",
+    "print(similar_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "`find_similar_movies()` takes in a movieId and user-item X matrix, and outputs a list of $k$ movies that are similar to the movieId of interest. \n",
     "\n",
     "Let's see how it works in action. We will first create another mapper that maps `movieId` to `title` so that our results are interpretable. "
@@ -972,24 +1048,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Because you watched Toy Story (1995)\n",
-      "Toy Story 2 (1999)\n",
-      "Jurassic Park (1993)\n",
-      "Independence Day (a.k.a. ID4) (1996)\n",
-      "Star Wars: Episode IV - A New Hope (1977)\n",
-      "Forrest Gump (1994)\n",
-      "Lion King, The (1994)\n",
-      "Star Wars: Episode VI - Return of the Jedi (1983)\n",
-      "Mission: Impossible (1996)\n",
-      "Groundhog Day (1993)\n",
-      "Back to the Future (1985)\n"
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-145-18d40a86ee08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmovie_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0msimilar_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_similar_movies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovie_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mmovie_title\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmovie_titles\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmovie_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
      ]
     }
    ],
