--- a/part-1-model-model-recommender.ipynb
+++ b/part-1-model-model-recommender.ipynb
@@ -125,6 +125,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 4: KNN to find similar models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_similar_models(model_id, X, k, metric='cosine', show_distance=False):\n",
+    "    \"\"\"\n",
+    "    Finds k-nearest neighbours for a given model id.\n",
+    "    \n",
+    "    Args:\n",
+    "        model_id: id of the model of interest\n",
+    "        X: model-feature utility matrix\n",
+    "        k: number of similar model to retrieve\n",
+    "        metric: distance metric for kNN calculations\n",
+    "    \n",
+    "    Returns:\n",
+    "        list of k similar movie ID's\n",
+    "    \"\"\"\n",
+    "    neighbour_ids = []\n",
+    "    # model_vec = X[model_id]\n",
+    "    model_vec = [model_feat_vec[model_id] for i in range(col_size)]\n",
+    "\n",
+    "    k+=1\n",
+    "    kNN = NearestNeighbors(n_neighbors=k, algorithm=\"brute\", metric=metric)\n",
+    "    kNN.fit(X)\n",
+    "    if isinstance(model_vec, (np.ndarray)):\n",
+    "        model_vec = model_vec.reshape(1,-1)\n",
+    " \n",
+    "\n",
+    "    neighbour = kNN.kneighbors(model_vec, return_distance=show_distance)\n",
+    "    for i in range(0,k):\n",
+    "        n = neighbour.item(i)\n",
+    "        neighbour_ids.append(n)\n",
+    "    neighbour_ids.pop(0)\n",
+    "    return neighbour_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 3, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "similar_ids = find_similar_models(model_id=9, X=util_matrix, k=3, metric=\"euclidean\")\n",
+    "print(similar_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------------------------- End of Experiment -----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 3: Exploratory Data Analysis\n",
     "\n",
     "In Part 1 of this tutorial series, we will focus on the `ratings` dataset. We'll need `movies` for subsequent sections. `Ratings` contains users' ratings for a given movie. Let's see how many ratings, unique movies, and unique users are in our dataset. "
@@ -972,69 +1042,6 @@
     "        neighbour_ids.append(movie_inv_mapper[n])\n",
     "    neighbour_ids.pop(0)\n",
     "    return neighbour_ids"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TEST\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_similar_models(model_id, X, k, metric='cosine', show_distance=False):\n",
-    "    \"\"\"\n",
-    "    Finds k-nearest neighbours for a given model id.\n",
-    "    \n",
-    "    Args:\n",
-    "        model_id: id of the model of interest\n",
-    "        X: model-feature utility matrix\n",
-    "        k: number of similar model to retrieve\n",
-    "        metric: distance metric for kNN calculations\n",
-    "    \n",
-    "    Returns:\n",
-    "        list of k similar movie ID's\n",
-    "    \"\"\"\n",
-    "    neighbour_ids = []\n",
-    "    # model_vec = X[model_id]\n",
-    "    model_vec = [model_feat_vec[model_id] for i in range(col_size)]\n",
-    "\n",
-    "    k+=1\n",
-    "    kNN = NearestNeighbors(n_neighbors=k, algorithm=\"brute\", metric=metric)\n",
-    "    kNN.fit(X)\n",
-    "    if isinstance(model_vec, (np.ndarray)):\n",
-    "        model_vec = model_vec.reshape(1,-1)\n",
-    " \n",
-    "\n",
-    "    neighbour = kNN.kneighbors(model_vec, return_distance=show_distance)\n",
-    "    for i in range(0,k):\n",
-    "        n = neighbour.item(i)\n",
-    "        neighbour_ids.append(n)\n",
-    "    neighbour_ids.pop(0)\n",
-    "    return neighbour_ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[8, 3, 6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "similar_ids = find_similar_models(model_id=9, X=util_matrix, k=3, metric=\"euclidean\")\n",
-    "print(similar_ids)"
    ]
   },
   {
