making draft for eval. lot of work to do still

--- a/part-1-model-model-recommender.ipynb
+++ b/part-1-model-model-recommender.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -94,18 +94,18 @@
      "output_type": "stream",
      "text": [
       "   0   1   2   3   4   5   6   7   8   9   ...  45  46  47  48  49  50  51  \\\n",
-      "0   1   0   1   0   0   0   1   1   0   0  ...   0   1   1   1   1   1   0   \n",
-      "1   1   0   0   0   0   0   0   0   1   1  ...   1   0   1   0   1   1   1   \n",
-      "2   0   1   0   0   0   1   0   0   0   1  ...   0   0   0   0   0   1   0   \n",
-      "3   1   0   0   1   0   0   0   1   0   1  ...   0   1   0   0   0   0   0   \n",
-      "4   0   0   0   0   0   0   0   1   0   0  ...   0   0   0   0   0   0   0   \n",
+      "0   0   1   0   0   0   0   0   0   1   0  ...   0   0   0   1   0   1   0   \n",
+      "1   1   0   0   1   0   1   0   0   0   0  ...   1   1   0   1   1   0   0   \n",
+      "2   0   0   0   0   0   0   0   0   0   0  ...   0   0   0   0   0   0   0   \n",
+      "3   0   1   1   1   0   0   1   0   0   1  ...   1   0   1   1   0   1   0   \n",
+      "4   1   1   0   0   0   0   1   0   1   0  ...   0   1   0   0   0   1   0   \n",
       "\n",
       "   52  53  54  \n",
-      "0   1   0   1  \n",
-      "1   1   0   0  \n",
-      "2   0   1   1  \n",
-      "3   0   1   0  \n",
-      "4   0   0   0  \n",
+      "0   0   0   0  \n",
+      "1   0   0   0  \n",
+      "2   0   1   0  \n",
+      "3   1   1   0  \n",
+      "4   1   1   0  \n",
       "\n",
       "[5 rows x 55 columns]\n"
      ]
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,6 @@
     "    if isinstance(model_vec, (np.ndarray)):\n",
     "        model_vec = model_vec.reshape(1,-1)\n",
     " \n",
-    "\n",
     "    neighbour = kNN.kneighbors(model_vec, return_distance=show_distance)\n",
     "    for i in range(0,k):\n",
     "        n = neighbour.item(i)\n",
@@ -168,20 +167,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 3, 6]\n"
+      "[7, 2, 0]\n"
      ]
     }
    ],
    "source": [
-    "similar_ids = find_similar_models(model_id=9, X=util_matrix, k=3, metric=\"euclidean\")\n",
+    "model_of_interest = 9\n",
+    "similar_ids = find_similar_models(model_id=model_of_interest, X=util_matrix, k=3, metric=\"euclidean\")\n",
     "print(similar_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5 Evaluating Recommender System: Top-precision RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ 1,  2,  3,  6,  9, 10, 11, 12, 13, 14, 15, 16, 17, 19, 21, 22, 24,\n",
+      "       26, 29, 30, 31, 32, 35, 37, 39, 45, 47, 48, 50, 52, 53]),)\n",
+      "(array([ 1,  8, 44, 48, 50]),)\n",
+      "(array([16, 23, 30, 31, 34, 40, 41, 47, 48]),)\n",
+      "(array([ 3,  4, 10, 13, 16, 17, 29, 30, 33, 36, 40, 47, 52]),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = util_matrix.sample(frac=0.8, random_state=10)\n",
+    "test_data = util_matrix.drop(train_data.index)\n",
+    "# use rmse to evaluate model\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "def rmse(y_true, y_pred):\n",
+    "    return np.sqrt(mean_squared_error(y_true, y_pred))\n",
+    "    \n"
    ]
   },
   {
